crates/strider/tests/snapshots/v2__arm__complex__bit_test_zero.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x5fc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" -> "5" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "12" [label="IndirectBranch", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "13" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0xfffffffe:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "5" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "16" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "20" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v21" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v21" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "22" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "23" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v24" -> "20" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "25" -> "20" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "23" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "26" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "26" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x5f8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "26" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "26" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "28" -> "26" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" -> "26" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "30" [label="IndirectBranch", shape=doublecircle, fillcolor="#103a10"];
  "26" -> "30" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "26" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "30" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "31" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0xfffffffe:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "26" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "32" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "34" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "36" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "36" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
}
